[package]
name = "gtk4-rs-examples"
version = "0.1.0"
authors = ["The Gtk-rs Project Developers"]
edition = "2018"

[dependencies.chrono]
version = "0.4.19"

[dependencies.once_cell]
version = "1.5"

[dependencies.gettext-rs]
version = "0.4.4"
features = ["gettext-system"]

[dependencies.gdk]
git = "https://github.com/gtk-rs/gtk4-rs"
package = "gdk4"

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk4-rs"
package = "gtk4"

[dependencies.gtk-macros]
version = "0.2.0"

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs"
features = ["v2_60"]

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs"
features = ["v2_60"]

